add scribe documentation
