# public/docs/openapi.yaml
@@ -9,13 +9,73 @@ servers:
 paths:
   /api/shops:
     post:
-      summary: 'Save a new shop/store'
-      operationId: saveANewShopstore
+      summary: 'Add a new store'
+      operationId: addANewStore
       description: ''
       parameters: []
-      responses: {  }
+      responses:
+        201:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  id: 1
+                  type: shop
+                  attributes:
+                    name: 'Garrys Value Store'
+                    latitude: 57.084444
+                    longitude: -2.255708
+                    status: O
+                    max_delivery_distance: 100
+                    created_at: '2024-08-19T17:30:50.000000Z'
+                    updated_at: null
+                  relationships: []
+                  includes: []
+                  links: []
+                properties:
+                  id:
+                    type: integer
+                    example: 1
+                  type:
+                    type: string
+                    example: shop
+                  attributes:
+                    type: object
+                    properties:
+                      name:
+                        type: string
+                        example: 'Garrys Value Store'
+                      latitude:
+                        type: number
+                        example: 57.084444
+                      longitude:
+                        type: number
+                        example: -2.255708
+                      status:
+                        type: string
+                        example: O
+                      max_delivery_distance:
+                        type: integer
+                        example: 100
+                      created_at:
+                        type: string
+                        example: '2024-08-19T17:30:50.000000Z'
+                      updated_at:
+                        type: string
+                        example: null
+                  relationships:
+                    type: array
+                    example: []
+                  includes:
+                    type: array
+                    example: []
+                  links:
+                    type: array
+                    example: []
       tags:
-        - Endpoints
+        - 'Stores API endpoints'
       requestBody:
         required: true
         content:
@@ -26,15 +86,15 @@ paths:
                 name:
                   type: string
                   description: 'Must be at least 5 characters. Must not be greater than 100 characters.'
-                  example: lyvfddvzymbfiajphzlq
+                  example: tceirpxj
                 latitude:
                   type: string
-                  description: 'Must match the regex /^[-]?(([0-8]?[0-9])\.(\d+))|(90(\.0+)?)$/.'
-                  example: 0.78441)|)
+                  description: 'The postcodes latitude. Must match the regex /^[-]?(([0-8]?[0-9])\.(\d+))|(90(\.0+)?)$/.'
+                  example: '57.084444'
                 longitude:
                   type: string
-                  description: 'Must match the regex /^[-]?((((1[0-7][0-9])|([0-9]?[0-9]))\.(\d+))|180(\.0+)?)$/.'
-                  example: '-130|6).3)|180)'
+                  description: 'The postcodes longitude. Must match the regex /^[-]?((((1[0-7][0-9])|([0-9]?[0-9]))\.(\d+))|180(\.0+)?)$/.'
+                  example: '-2.255708'
                 status:
                   type: string
                   description: ''
@@ -45,15 +105,15 @@ paths:
                 store_type:
                   type: string
                   description: ''
-                  example: shop
+                  example: takeaway
                   enum:
                     - takeaway
                     - shop
                     - restaurant
                 max_delivery_distance:
-                  type: string
-                  description: 'Must be at least 1 character. Must not be greater than 255 characters.'
-                  example: swvie
+                  type: integer
+                  description: 'Must be at least 0. Must not be greater than 100.'
+                  example: 3
               required:
                 - name
                 - latitude
@@ -62,37 +122,80 @@ paths:
                 - max_delivery_distance
       security: []
     get:
-      summary: 'Find a stores within the given distance'
-      operationId: findAStoresWithinTheGivenDistance
+      summary: 'Find stores within a specified distance (miles)'
+      operationId: findStoresWithinASpecifiedDistancemiles
       description: ''
-      parameters: []
+      parameters:
+        -
+          in: query
+          name: latitude
+          description: 'The postcodes geographical latitude.'
+          example: 57.084444
+          required: true
+          schema:
+            type: number
+            description: 'The postcodes geographical latitude.'
+            example: 57.084444
+        -
+          in: query
+          name: longitude
+          description: 'The postcodes geographical longitude.'
+          example: -2.255708
+          required: true
+          schema:
+            type: number
+            description: 'The postcodes geographical longitude.'
+            example: -2.255708
+        -
+          in: query
+          name: distance
+          description: 'Max distance (in miles) to nearest shop.'
+          example: 10.0
+          required: true
+          schema:
+            type: number
+            description: 'Max distance (in miles) to nearest shop.'
+            example: 10.0
       responses:
-        422:
+        200:
           description: ''
           content:
             application/json:
               schema:
-                type: object
+                type: array
+                items:
+                  type: object
                 example:
-                  message: 'The longitude field format is invalid.'
-                  errors:
-                    longitude:
-                      - 'The longitude field format is invalid.'
-                properties:
-                  message:
-                    type: string
-                    example: 'The longitude field format is invalid.'
-                  errors:
-                    type: object
-                    properties:
-                      longitude:
-                        type: array
-                        example:
-                          - 'The longitude field format is invalid.'
-                        items:
-                          type: string
+                  -
+                    id: 1
+                    type: shop
+                    attributes:
+                      name: 'Garrys Value Store'
+                      latitude: 57.084444
+                      longitude: -2.255708
+                      status: O
+                      max_delivery_distance: 100
+                      created_at: '2024-08-19T17:30:50.000000Z'
+                      updated_at: null
+                    relationships: []
+                    includes: []
+                    links: []
+                  -
+                    id: 2
+                    type: shop
+                    attributes:
+                      name: 'Reds Super Store'
+                      latitude: 57.084444
+                      longitude: -2.255708
+                      status: O
+                      max_delivery_distance: 100
+                      created_at: '2024-08-19T17:32:56.000000Z'
+                      updated_at: null
+                    relationships: []
+                    includes: []
+                    links: []
       tags:
-        - Endpoints
+        - 'Stores API endpoints'
       requestBody:
         required: true
         content:
@@ -103,20 +206,20 @@ paths:
                 latitude:
                   type: string
                   description: 'Must match the regex /^[-]?(([0-8]?[0-9])\.(\d+))|(90(\.0+)?)$/.'
-                  example: 27.3)|90.0)
+                  example: 33.263)|90.0)
                 longitude:
                   type: string
                   description: 'Must match the regex /^[-]?((((1[0-7][0-9])|([0-9]?[0-9]))\.(\d+))|180(\.0+)?)$/.'
-                  example: '-128|72).2675)|180)'
+                  example: '-148|42).62)|180.0)'
                 distance:
                   type: number
                   description: 'Must not be greater than 100.'
-                  example: 10
+                  example: 19
               required:
                 - latitude
                 - distance
       security: []
 tags:
   -
-    name: Endpoints
+    name: 'Stores API endpoints'
     description: ''
